k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-iris-api
  namespace: mlops
  labels:
    app: mlops-iris-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlops-iris-api
  template:
    metadata:
      labels:
        app: mlops-iris-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: api
          image: mlops-serving:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
